# asm2wasm

./: CMakeLists.txt  README.md  build.sh
examples/: advanced_arithmetic.asm  arithmetic.asm  conditional_jump.asm  fibonacci.asm  function_calls.asm  loop_example.asm  memory_advanced.asm  memory_operations.asm  simple_add.asm
include/: assembly_lifter.h  assembly_parser.h  wasm_generator.h
src/: assembly_lifter.cpp  assembly_lifter_control_flow.cpp  assembly_lifter_core.cpp  assembly_lifter_instructions.cpp  assembly_lifter_memory.cpp  assembly_parser.cpp  main.cpp  wasm_generator.cpp
